--- a/AppLayer/bin/AppLayer.dll.config
+++ b/AppLayer/bin/AppLayer.dll.config
@@ -53,7 +53,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ConferenceContext" connectionString="data source=Ankita\SQLEXPRESS; initial catalog=Conference; integrated security=true;" providerName="System.Data.SqlClient" />
+    <add name="ConferenceContext" connectionString="data source=Ankita\SQLEXPRESS; initial catalog=CMS; integrated security=true;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <entityFramework>
     <providers>
