--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -47,6 +47,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="DTOs\AuditoriumDTO.cs" />
+    <Compile Include="DTOs\ForgetPassDTO.cs" />
+    <Compile Include="DTOs\LoginDTO.cs" />
     <Compile Include="DTOs\SeatDTO.cs" />
     <Compile Include="DTOs\StaffDTO.cs" />
     <Compile Include="DTOs\TicketDTO.cs" />
@@ -54,6 +56,7 @@
     <Compile Include="DTOs\VenueDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuditoriumService.cs" />
+    <Compile Include="Services\LoginService.cs" />
     <Compile Include="Services\MapperService.cs" />
     <Compile Include="Services\SeatService.cs" />
     <Compile Include="Services\StaffService.cs" />
