--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -54,27 +54,31 @@
     <Compile Include="DataAccess.cs" />
     <Compile Include="EF\ConferenceContext.cs" />
     <Compile Include="EF\Models\Auditorium.cs" />
+    <Compile Include="EF\Models\Login.cs" />
     <Compile Include="EF\Models\Seat.cs" />
     <Compile Include="EF\Models\Staff.cs" />
     <Compile Include="EF\Models\Ticket.cs" />
     <Compile Include="EF\Models\User.cs" />
     <Compile Include="EF\Models\Venue.cs" />
+    <Compile Include="Interfaces\IAuth.cs" />
+    <Compile Include="Interfaces\IPass.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
-    <Compile Include="Migrations\202308151558200_dbinit.cs" />
-    <Compile Include="Migrations\202308151558200_dbinit.designer.cs">
-      <DependentUpon>202308151558200_dbinit.cs</DependentUpon>
+    <Compile Include="Migrations\202308271004312_db_created.cs" />
+    <Compile Include="Migrations\202308271004312_db_created.designer.cs">
+      <DependentUpon>202308271004312_db_created.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202308161715342_TicketUser_added.cs" />
-    <Compile Include="Migrations\202308161715342_TicketUser_added.designer.cs">
-      <DependentUpon>202308161715342_TicketUser_added.cs</DependentUpon>
+    <Compile Include="Migrations\202308271013446_audtorium_name_added.cs" />
+    <Compile Include="Migrations\202308271013446_audtorium_name_added.designer.cs">
+      <DependentUpon>202308271013446_audtorium_name_added.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\202308201521566_SeatEntityAdded.cs" />
-    <Compile Include="Migrations\202308201521566_SeatEntityAdded.designer.cs">
-      <DependentUpon>202308201521566_SeatEntityAdded.cs</DependentUpon>
+    <Compile Include="Migrations\202308271501147_login_created.cs" />
+    <Compile Include="Migrations\202308271501147_login_created.designer.cs">
+      <DependentUpon>202308271501147_login_created.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\AuditoriumRepo.cs" />
+    <Compile Include="Repos\LoginRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
     <Compile Include="Repos\SeatRepo.cs" />
     <Compile Include="Repos\StaffRepo.cs" />
@@ -87,14 +91,14 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\202308151558200_dbinit.resx">
-      <DependentUpon>202308151558200_dbinit.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202308271004312_db_created.resx">
+      <DependentUpon>202308271004312_db_created.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202308161715342_TicketUser_added.resx">
-      <DependentUpon>202308161715342_TicketUser_added.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202308271013446_audtorium_name_added.resx">
+      <DependentUpon>202308271013446_audtorium_name_added.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\202308201521566_SeatEntityAdded.resx">
-      <DependentUpon>202308201521566_SeatEntityAdded.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\202308271501147_login_created.resx">
+      <DependentUpon>202308271501147_login_created.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
