--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -57,11 +57,9 @@
     <Compile Include="Class1.cs" />
     <Compile Include="DTOs\AuditoriumDTO.cs" />
     <Compile Include="DTOs\ForgetPassDTO.cs" />
-    <Compile Include="DTOs\LoginDTO.cs" />
     <Compile Include="DTOs\SeatDTO.cs" />
     <Compile Include="DTOs\StaffDTO.cs" />
-    <Compile Include="DTOs\TicketDTO.cs" />
-    <Compile Include="DTOs\UserDTO.cs" />
+    <Compile Include="DTOs\TokenDTO.cs" />
     <Compile Include="DTOs\VenueDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuditoriumService.cs" />
@@ -69,8 +67,6 @@
     <Compile Include="Services\MapperService.cs" />
     <Compile Include="Services\SeatService.cs" />
     <Compile Include="Services\StaffService.cs" />
-    <Compile Include="Services\TicketService.cs" />
-    <Compile Include="Services\UserService.cs" />
     <Compile Include="Services\VenueService.cs" />
   </ItemGroup>
   <ItemGroup>
