--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -59,11 +59,11 @@
     <Compile Include="DTOs\ForgetPassDTO.cs" />
     <Compile Include="DTOs\SeatDTO.cs" />
     <Compile Include="DTOs\StaffDTO.cs" />
-    <Compile Include="DTOs\TokenDTO.cs" />
+    <Compile Include="DTOs\StaffTokenDTO.cs" />
     <Compile Include="DTOs\VenueDTO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\AuditoriumService.cs" />
-    <Compile Include="Services\LoginService.cs" />
+    <Compile Include="Services\StaffLoginService.cs" />
     <Compile Include="Services\MapperService.cs" />
     <Compile Include="Services\SeatService.cs" />
     <Compile Include="Services\StaffService.cs" />
