--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -52,15 +52,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccess.cs" />
-    <Compile Include="EF\ConferenceContext.cs" />
+    <Compile Include="EF\CTSContext.cs" />
     <Compile Include="EF\Models\Auditorium.cs" />
-    <Compile Include="EF\Models\Login.cs" />
+    <Compile Include="EF\Models\StaffLogin.cs" />
     <Compile Include="EF\Models\PassOTP.cs" />
     <Compile Include="EF\Models\Seat.cs" />
     <Compile Include="EF\Models\Staff.cs" />
-    <Compile Include="EF\Models\Token.cs" />
+    <Compile Include="EF\Models\StaffToken.cs" />
     <Compile Include="EF\Models\Venue.cs" />
-    <Compile Include="Interfaces\IAuth.cs" />
+    <Compile Include="Interfaces\IStaffAuth.cs" />
     <Compile Include="Interfaces\IRepo.cs" />
     <Compile Include="Migrations\202308271004312_db_created.cs" />
     <Compile Include="Migrations\202308271004312_db_created.designer.cs">
@@ -86,15 +86,19 @@
     <Compile Include="Migrations\202308281403562_auditorium_column_edited.designer.cs">
       <DependentUpon>202308281403562_auditorium_column_edited.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202308281542551_entity_changed.cs" />
+    <Compile Include="Migrations\202308281542551_entity_changed.designer.cs">
+      <DependentUpon>202308281542551_entity_changed.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repos\AuditoriumRepo.cs" />
     <Compile Include="Repos\ForgetPassRepo.cs" />
-    <Compile Include="Repos\LoginRepo.cs" />
+    <Compile Include="Repos\StaffLoginRepo.cs" />
     <Compile Include="Repos\Repo.cs" />
     <Compile Include="Repos\SeatRepo.cs" />
     <Compile Include="Repos\StaffRepo.cs" />
-    <Compile Include="Repos\TokenRepo.cs" />
+    <Compile Include="Repos\StaffTokenRepo.cs" />
     <Compile Include="Repos\VenueRepo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -119,6 +123,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202308281403562_auditorium_column_edited.resx">
       <DependentUpon>202308281403562_auditorium_column_edited.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202308281542551_entity_changed.resx">
+      <DependentUpon>202308281542551_entity_changed.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
